Standardized data paths

--- a/Data Transf & Postgres Load - LH.ipynb
+++ b/Data Transf & Postgres Load - LH.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "4a2c9284-2546-4216-8fd1-bb69fd818e71",
    "metadata": {},
    "outputs": [],
@@ -43,19 +43,19 @@
     "# BLS DATA\n",
     "\n",
     "# read bls cpi data  \n",
-    "source_bls_cpi = pd.read_csv( \"data/ap.data.0.Current\", sep='\\t',\n",
+    "source_bls_cpi = pd.read_csv( \"CPIData/ap.data.0.Current\", sep='\\t',\n",
     "            dtype =  { 'series_id': str, 'year': int, 'period': str, 'value': float, 'footnote_codes': str } )\n",
     "\n",
     "# read bls series (product types) attribute data \n",
-    "source_bls_series = pd.read_csv( \"data/ap.series\", sep='\\t' )\n",
+    "source_bls_series = pd.read_csv( \"CPIData/ap.series\", sep='\\t' )\n",
     "\n",
     "# read bls geo attribute data\n",
-    "source_bls_geo = pd.read_csv( \"data/ap.area\", sep='\\t' )"
+    "source_bls_geo = pd.read_csv( \"CPIData/ap.area\", sep='\\t' )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "5ddf9f85-6182-4d0e-9ef6-4e16b4246062",
    "metadata": {},
    "outputs": [],
@@ -63,12 +63,12 @@
     "# ZILLOW DATA \n",
     "\n",
     "# read zillow data\n",
-    "source_zillow = pd.read_csv( \"data/metro_zori_uc_sfrcondomfr_sm_month.csv\" )"
+    "source_zillow = pd.read_csv( \"ZORIData/metro_zori_uc_sfrcondomfr_sm_month.csv\" )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "0301f20f-c4e2-40f0-a528-0e01a694beb3",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
     "census_years = [ 2015, 2016, 2017, 2018, 2019, 2021, 2022 ]\n",
     "for year in census_years: \n",
     "    # read in file\n",
-    "    census_temp = pd.read_csv( \"data/ACSDT1Y\"+str(year)+\".B19051-Data.csv\", header=1 )\n",
+    "    census_temp = pd.read_csv( \"CensusEarningsData/ACSDT1Y\"+str(year)+\".B19051-Data.csv\", header=1 )\n",
     "    # rename columns for consistency when appending\n",
     "    census_temp.columns = columns \n",
     "    # add year column\n",
@@ -99,13 +99,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "831f3b6d-783b-4fcc-b6ca-c5aecb73ad19",
    "metadata": {},
    "outputs": [],
    "source": [
     "# read in geo_map, no modifications need\n",
-    "source_geo_map = pd.read_csv( \"data/geo_map.csv\"  )"
+    "source_geo_map = pd.read_csv( \"geo_map.csv\"  )"
    ]
   },
   {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "3dcf4c41-b892-4c09-9f45-8d27b8a36f2e",
    "metadata": {},
    "outputs": [],
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "485e9697-3106-4e30-babf-45dd1c1d0fb5",
    "metadata": {},
    "outputs": [],
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "ec2997b5-ccfa-41ec-9e25-5165928cc1fe",
    "metadata": {},
    "outputs": [],
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "c66d3d11-b657-4eb5-a69b-512a5138b339",
    "metadata": {},
    "outputs": [],
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "ad3eb0cf-aa41-4cec-a685-16c2be8d0933",
    "metadata": {},
    "outputs": [],
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "8258fd9f-25ec-4817-b6c8-78a72d88e7f5",
    "metadata": {},
    "outputs": [],
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "26b1be3e-0e1d-4532-8279-3a4635f9dff8",
    "metadata": {},
    "outputs": [],
